# nautobot-mcp-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
.agent/: gsd-file-manifest.json
.agent/workflows/: update-docs.md
.claude/: gsd-file-manifest.json
.claude/agents/: gsd-debugger.md  gsd-phase-researcher.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md
.claude/gsd-local-patches/: backup-meta.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.2-UAT.md  v1.6-ROADMAP.md  (+4 more)
nautobot_mcp/: __init__.py  bridge.py  circuits.py  client.py  config.py  devices.py  drift.py  exceptions.py  golden_config.py  interfaces.py  ipam.py  onboarding.py  organization.py  server.py  utils.py  verification.py  warnings.py  workflows.py
scripts/: generate_catalog.py  install-skills.ps1  uat_cms_smoke.py  uat_smoke_test.py
tests/: conftest.py  test_bridge.py  test_catalog.py  test_cli.py  test_cli_cms_drift.py  test_client.py  test_cms_arp.py  test_cms_client.py  test_cms_composites.py  test_cms_drift.py  test_cms_firewalls.py  test_cms_firewalls_n1.py  test_cms_interfaces.py  test_cms_interfaces_n1.py  test_cms_policies.py  test_cms_routing.py  test_cms_routing_n1.py  test_config.py  test_devices.py  test_drift.py  test_exceptions.py  test_ipam.py  test_models.py  test_onboarding.py  test_server.py  test_uat.py  test_verification.py  test_workflows.py
(+431 files in other folders)
