[project]
name = "nautobot-mcp-cli"
version = "0.1.0"
description = "MCP server and CLI for Nautobot network automation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pynautobot>=2.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "fastmcp>=3.0.0",
    "typer>=0.15.0",
    "tabulate>=0.9.0",
]

[project.scripts]
nautobot-mcp = "nautobot_mcp.cli.app:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
]

[tool.hatch.build.targets.wheel]
packages = ["nautobot_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
